// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[gatsby-source-wordpress-experimental] data resolution resolves correct number of nodes 1`] = `
Array [
  Object {
    "id": "cG9zdDo3NzQ0",
    "sourceUrl": "https://gatsbyinttests.wpengine.com/wp-content/uploads/2020/08/101-2621x1747-1-scaled.jpg",
  },
  Object {
    "id": "cG9zdDo3NzQ4",
    "sourceUrl": "https://gatsbyinttests.wpengine.com/wp-content/uploads/2020/08/1002-4312x2868-1-scaled.jpg",
  },
  Object {
    "id": "cG9zdDo3NzQw",
    "sourceUrl": null,
  },
  Object {
    "id": "cG9zdDo3NzU2",
    "sourceUrl": "https://gatsbyinttests.wpengine.com/wp-content/uploads/2020/08/1001-5616x3744-1-scaled.jpg",
  },
  Object {
    "id": "cG9zdDo3NzUy",
    "sourceUrl": "https://gatsbyinttests.wpengine.com/wp-content/uploads/2020/08/1003-1181x1772-1.jpg",
  },
  Object {
    "id": "cG9zdDo3NzY0",
    "sourceUrl": "https://gatsbyinttests.wpengine.com/wp-content/uploads/2020/08/1004-5616x3744-1-scaled.jpg",
  },
  Object {
    "id": "cG9zdDo3NzYw",
    "sourceUrl": "https://gatsbyinttests.wpengine.com/wp-content/uploads/2020/08/10-2500x1667-1.jpg",
  },
  Object {
    "id": "cG9zdDo4NTI1",
    "sourceUrl": "https://gatsbyinttests.wpengine.com/wp-content/uploads/2020/09/vneck-tee-2.jpg",
  },
  Object {
    "id": "cG9zdDo4NTI5",
    "sourceUrl": "https://gatsbyinttests.wpengine.com/wp-content/uploads/2020/09/vnech-tee-green-1.jpg",
  },
  Object {
    "id": "cG9zdDo4NTM3",
    "sourceUrl": "https://gatsbyinttests.wpengine.com/wp-content/uploads/2020/09/hoodie-2.jpg",
  },
  Object {
    "id": "cG9zdDo4NTMz",
    "sourceUrl": "https://gatsbyinttests.wpengine.com/wp-content/uploads/2020/09/vnech-tee-blue-1.jpg",
  },
  Object {
    "id": "cG9zdDo4NTQ1",
    "sourceUrl": "https://gatsbyinttests.wpengine.com/wp-content/uploads/2020/09/hoodie-green-1.jpg",
  },
  Object {
    "id": "cG9zdDo4NTQ5",
    "sourceUrl": "https://gatsbyinttests.wpengine.com/wp-content/uploads/2020/09/hoodie-with-logo-2.jpg",
  },
  Object {
    "id": "cG9zdDo4NTQx",
    "sourceUrl": "https://gatsbyinttests.wpengine.com/wp-content/uploads/2020/09/hoodie-blue-1.jpg",
  },
  Object {
    "id": "cG9zdDo4NTU3",
    "sourceUrl": "https://gatsbyinttests.wpengine.com/wp-content/uploads/2020/09/beanie-2.jpg",
  },
  Object {
    "id": "cG9zdDo4NTUz",
    "sourceUrl": "https://gatsbyinttests.wpengine.com/wp-content/uploads/2020/09/tshirt-2.jpg",
  },
  Object {
    "id": "cG9zdDo4NTY1",
    "sourceUrl": "https://gatsbyinttests.wpengine.com/wp-content/uploads/2020/09/cap-2.jpg",
  },
  Object {
    "id": "cG9zdDo4NTY5",
    "sourceUrl": "https://gatsbyinttests.wpengine.com/wp-content/uploads/2020/09/sunglasses-2.jpg",
  },
  Object {
    "id": "cG9zdDo4NTYx",
    "sourceUrl": "https://gatsbyinttests.wpengine.com/wp-content/uploads/2020/09/belt-2.jpg",
  },
  Object {
    "id": "cG9zdDo4NTc3",
    "sourceUrl": "https://gatsbyinttests.wpengine.com/wp-content/uploads/2020/09/hoodie-with-zipper-2.jpg",
  },
  Object {
    "id": "cG9zdDo4NTg1",
    "sourceUrl": "https://gatsbyinttests.wpengine.com/wp-content/uploads/2020/09/polo-2.jpg",
  },
  Object {
    "id": "cG9zdDo4NTg5",
    "sourceUrl": "https://gatsbyinttests.wpengine.com/wp-content/uploads/2020/09/album-1.jpg",
  },
  Object {
    "id": "cG9zdDo4NTgx",
    "sourceUrl": "https://gatsbyinttests.wpengine.com/wp-content/uploads/2020/09/long-sleeve-tee-2.jpg",
  },
  Object {
    "id": "cG9zdDo4NTk3",
    "sourceUrl": "https://gatsbyinttests.wpengine.com/wp-content/uploads/2020/09/t-shirt-with-logo-1.jpg",
  },
  Object {
    "id": "cG9zdDo4NTkz",
    "sourceUrl": "https://gatsbyinttests.wpengine.com/wp-content/uploads/2020/09/single-1.jpg",
  },
  Object {
    "id": "cG9zdDo4NjA1",
    "sourceUrl": "https://gatsbyinttests.wpengine.com/wp-content/uploads/2020/09/logo-1.jpg",
  },
  Object {
    "id": "cG9zdDo4NjA5",
    "sourceUrl": "https://gatsbyinttests.wpengine.com/wp-content/uploads/2020/09/pennant-1.jpg",
  },
  Object {
    "id": "cG9zdDo4NjAx",
    "sourceUrl": "https://gatsbyinttests.wpengine.com/wp-content/uploads/2020/09/beanie-with-logo-1.jpg",
  },
  Object {
    "id": "cG9zdDo5MjA0",
    "sourceUrl": "https://gatsbyinttests.wpengine.com/wp-content/uploads/2020/09/windows-W1N58KDE8r0-unsplash-1-scaled-e1600819839939.jpg",
  },
  Object {
    "id": "cG9zdDo5MjEw",
    "sourceUrl": "https://gatsbyinttests.wpengine.com/wp-content/uploads/2020/09/windows-W1N58KDE8r0-unsplash-scaled-e1600819062167.jpg",
  },
  Object {
    "id": "cG9zdDo5NQ==",
    "sourceUrl": "https://gatsbyinttests.wpengine.com/wp-content/uploads/2018/10/aperture-vintage-346923-unsplash-scaled.jpg",
  },
  Object {
    "id": "cG9zdDo5Ng==",
    "sourceUrl": "https://gatsbyinttests.wpengine.com/wp-content/uploads/2018/10/brandon-siu-608784-unsplash-scaled.jpg",
  },
  Object {
    "id": "cG9zdDo5Nw==",
    "sourceUrl": "https://gatsbyinttests.wpengine.com/wp-content/uploads/2018/10/casey-horner-512022-unsplash-scaled.jpg",
  },
  Object {
    "id": "cG9zdDo5OQ==",
    "sourceUrl": "https://gatsbyinttests.wpengine.com/wp-content/uploads/2020/03/avatar.jpg",
  },
  Object {
    "id": "cG9zdDoxMDA=",
    "sourceUrl": "https://gatsbyinttests.wpengine.com/wp-content/uploads/2018/10/federico-bottos-442265-unsplash-scaled.jpg",
  },
  Object {
    "id": "cG9zdDoxMDE=",
    "sourceUrl": "https://gatsbyinttests.wpengine.com/wp-content/uploads/2018/10/jordan-steranka-504707-unsplash-scaled.jpg",
  },
  Object {
    "id": "cG9zdDoxMDI=",
    "sourceUrl": "https://gatsbyinttests.wpengine.com/wp-content/uploads/2018/10/kristopher-roller-110203-unsplash-scaled.jpg",
  },
  Object {
    "id": "cG9zdDoxMDM=",
    "sourceUrl": "https://gatsbyinttests.wpengine.com/wp-content/uploads/2018/10/zoltan-tasi-482489-unsplash-scaled.jpg",
  },
  Object {
    "id": "cG9zdDoxOTU=",
    "sourceUrl": "https://gatsbyinttests.wpengine.com/wp-content/uploads/2020/03/1024x1024-300x300-1.png",
  },
  Object {
    "id": "cG9zdDozNjI=",
    "sourceUrl": "https://gatsbyinttests.wpengine.com/wp-content/uploads/2020/03/84-1000x1000-1.jpg",
  },
]
`;

exports[`[gatsby-source-wordpress-experimental] data resolution resolves menus 1`] = `
Object {
  "data": Object {
    "allWpMenu": Object {
      "nodes": Array [
        Object {
          "count": 4,
          "databaseId": 17,
          "id": "dGVybToxNw==",
          "menuItems": Object {
            "nodes": Array [
              Object {
                "childItems": Object {
                  "nodes": Array [],
                },
                "databaseId": 564,
                "id": "bmF2X21lbnVfaXRlbTo1NjQ=",
                "label": "Activity",
                "nodeType": "MenuItem",
                "target": null,
                "title": null,
                "url": "/activity/",
              },
              Object {
                "childItems": Object {
                  "nodes": Array [
                    Object {
                      "childItems": Object {
                        "nodes": Array [
                          Object {
                            "label": "test custom link",
                            "url": "https://google.com",
                          },
                        ],
                      },
                      "connectedNode": Object {
                        "node": Object {
                          "featuredImage": Object {
                            "node": Object {
                              "title": "84-1000×1000",
                            },
                          },
                          "title": "Hello world!",
                          "uri": "/2020/02/25/hello-world/",
                        },
                      },
                      "databaseId": 566,
                      "id": "bmF2X21lbnVfaXRlbTo1NjY=",
                      "label": "Hello world!",
                    },
                  ],
                },
                "databaseId": 565,
                "id": "bmF2X21lbnVfaXRlbTo1NjU=",
                "label": "Sample Page",
                "nodeType": "MenuItem",
                "target": null,
                "title": null,
                "url": "/sample-page/",
              },
              Object {
                "childItems": Object {
                  "nodes": Array [
                    Object {
                      "childItems": Object {
                        "nodes": Array [],
                      },
                      "connectedNode": null,
                      "databaseId": 567,
                      "id": "bmF2X21lbnVfaXRlbTo1Njc=",
                      "label": "test custom link",
                    },
                  ],
                },
                "databaseId": 566,
                "id": "bmF2X21lbnVfaXRlbTo1NjY=",
                "label": "Hello world!",
                "nodeType": "MenuItem",
                "target": null,
                "title": null,
                "url": "/2020/02/25/hello-world/",
              },
              Object {
                "childItems": Object {
                  "nodes": Array [],
                },
                "databaseId": 567,
                "id": "bmF2X21lbnVfaXRlbTo1Njc=",
                "label": "test custom link",
                "nodeType": "MenuItem",
                "target": null,
                "title": null,
                "url": "https://google.com",
              },
            ],
          },
          "name": "main menu",
        },
      ],
    },
  },
  "extensions": Object {},
}
`;

exports[`[gatsby-source-wordpress-experimental] data resolution resolves menus INCREMENTED 1`] = `
Object {
  "data": Object {
    "allWpMenu": Object {
      "nodes": Array [
        Object {
          "count": 4,
          "databaseId": 17,
          "id": "dGVybToxNw==",
          "menuItems": Object {
            "nodes": Array [
              Object {
                "childItems": Object {
                  "nodes": Array [],
                },
                "databaseId": 564,
                "id": "bmF2X21lbnVfaXRlbTo1NjQ=",
                "label": "Activity",
                "nodeType": "MenuItem",
                "target": null,
                "title": null,
                "url": "/activity/",
              },
              Object {
                "childItems": Object {
                  "nodes": Array [
                    Object {
                      "childItems": Object {
                        "nodes": Array [
                          Object {
                            "label": "test custom link",
                            "url": "https://google.com",
                          },
                        ],
                      },
                      "connectedNode": Object {
                        "node": Object {
                          "featuredImage": Object {
                            "node": Object {
                              "title": "84-1000×1000",
                            },
                          },
                          "title": "Hello world! DELTA SYNC",
                          "uri": "/2020/02/25/hello-world/",
                        },
                      },
                      "databaseId": 566,
                      "id": "bmF2X21lbnVfaXRlbTo1NjY=",
                      "label": "Hello world!",
                    },
                  ],
                },
                "databaseId": 565,
                "id": "bmF2X21lbnVfaXRlbTo1NjU=",
                "label": "Sample Page",
                "nodeType": "MenuItem",
                "target": null,
                "title": null,
                "url": "/sample-page/",
              },
              Object {
                "childItems": Object {
                  "nodes": Array [
                    Object {
                      "childItems": Object {
                        "nodes": Array [],
                      },
                      "connectedNode": null,
                      "databaseId": 567,
                      "id": "bmF2X21lbnVfaXRlbTo1Njc=",
                      "label": "test custom link",
                    },
                  ],
                },
                "databaseId": 566,
                "id": "bmF2X21lbnVfaXRlbTo1NjY=",
                "label": "Hello world!",
                "nodeType": "MenuItem",
                "target": null,
                "title": null,
                "url": "/2020/02/25/hello-world/",
              },
              Object {
                "childItems": Object {
                  "nodes": Array [],
                },
                "databaseId": 567,
                "id": "bmF2X21lbnVfaXRlbTo1Njc=",
                "label": "test custom link",
                "nodeType": "MenuItem",
                "target": null,
                "title": null,
                "url": "https://google.com",
              },
            ],
          },
          "name": "main menu",
        },
      ],
    },
  },
  "extensions": Object {},
}
`;

exports[`[gatsby-source-wordpress-experimental] data resolution resolves pages 1`] = `
Object {
  "data": Object {
    "allWpPage": Object {
      "nodes": Array [
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Sample Page",
          "translations": Array [],
          "uri": "/sample-page/",
          "wpChildren": Object {
            "nodes": Array [
              Object {
                "title": "Child page",
              },
            ],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Members",
          "translations": Array [
            Object {
              "title": "French home page",
            },
          ],
          "uri": "/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Activity",
          "translations": Array [],
          "uri": "/activity/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Child page",
          "translations": Array [],
          "uri": "/sample-page/child-page/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "French home page",
          "translations": Array [
            Object {
              "title": "Members",
            },
          ],
          "uri": "/fr/french-home-page/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "ACF Field Test",
          "translations": Array [],
          "uri": "/acf-field-test/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Yoast SEO",
          "translations": Array [],
          "uri": "/beautiful_slug/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Cart",
          "translations": Array [],
          "uri": "/cart/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Shop",
          "translations": Array [],
          "uri": "/shop/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "My account",
          "translations": Array [],
          "uri": "/my-account/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Checkout",
          "translations": Array [],
          "uri": "/checkout/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Inline gatsby-image Gutenberg test",
          "translations": Array [],
          "uri": "/inline-gatsby-image-test/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Edited inline html image test",
          "translations": Array [],
          "uri": "/edited-inline-html-image-test/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "inline html image edited after this post was saved",
          "translations": Array [],
          "uri": "/inline-html-image-edited-after-this-post-was-saved/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
      ],
    },
    "testPage": Object {
      "title": "Sample Page",
    },
  },
  "extensions": Object {},
}
`;

exports[`[gatsby-source-wordpress-experimental] data resolution resolves pages INCREMENTED 1`] = `
Object {
  "data": Object {
    "allWpPage": Object {
      "nodes": Array [
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Sample Page DELTA SYNC",
          "translations": Array [],
          "uri": "/sample-page/",
          "wpChildren": Object {
            "nodes": Array [
              Object {
                "title": "Child page",
              },
            ],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Members",
          "translations": Array [
            Object {
              "title": "French home page",
            },
          ],
          "uri": "/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Activity",
          "translations": Array [],
          "uri": "/activity/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Child page",
          "translations": Array [],
          "uri": "/sample-page/child-page/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "French home page",
          "translations": Array [
            Object {
              "title": "Members",
            },
          ],
          "uri": "/fr/french-home-page/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "ACF Field Test",
          "translations": Array [],
          "uri": "/acf-field-test/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Yoast SEO",
          "translations": Array [],
          "uri": "/beautiful_slug/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Cart",
          "translations": Array [],
          "uri": "/cart/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Shop",
          "translations": Array [],
          "uri": "/shop/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "My account",
          "translations": Array [],
          "uri": "/my-account/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Checkout",
          "translations": Array [],
          "uri": "/checkout/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Inline gatsby-image Gutenberg test",
          "translations": Array [],
          "uri": "/inline-gatsby-image-test/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Edited inline html image test",
          "translations": Array [],
          "uri": "/edited-inline-html-image-test/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "inline html image edited after this post was saved",
          "translations": Array [],
          "uri": "/inline-html-image-edited-after-this-post-was-saved/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
      ],
    },
    "testPage": Object {
      "title": "Sample Page DELTA SYNC",
    },
  },
  "extensions": Object {},
}
`;

exports[`[gatsby-source-wordpress-experimental] data resolution resolves posts 1`] = `
Object {
  "data": Object {
    "allWpPost": Object {
      "nodes": Array [
        Object {
          "author": Object {
            "node": Object {
              "avatar": Object {
                "url": "https://secure.gravatar.com/avatar/5fc9a2065017733c9d5f49a5ecd71d64?s=96&d=mm&r=g",
              },
              "comments": Object {
                "nodes": Array [],
              },
            },
          },
          "featuredImage": null,
          "title": "Gutenberg: Image Alignment",
        },
        Object {
          "author": Object {
            "node": Object {
              "avatar": Object {
                "url": "https://secure.gravatar.com/avatar/5fc9a2065017733c9d5f49a5ecd71d64?s=96&d=mm&r=g",
              },
              "comments": Object {
                "nodes": Array [],
              },
            },
          },
          "featuredImage": null,
          "title": "Gutenberg: Widget Blocks",
        },
        Object {
          "author": Object {
            "node": Object {
              "avatar": Object {
                "url": "https://secure.gravatar.com/avatar/5fc9a2065017733c9d5f49a5ecd71d64?s=96&d=mm&r=g",
              },
              "comments": Object {
                "nodes": Array [],
              },
            },
          },
          "featuredImage": null,
          "title": "Gutenberg: Common Blocks",
        },
        Object {
          "author": Object {
            "node": Object {
              "avatar": Object {
                "url": "https://secure.gravatar.com/avatar/5fc9a2065017733c9d5f49a5ecd71d64?s=96&d=mm&r=g",
              },
              "comments": Object {
                "nodes": Array [],
              },
            },
          },
          "featuredImage": null,
          "title": "Gutenberg: Classic Block",
        },
        Object {
          "author": Object {
            "node": Object {
              "avatar": Object {
                "url": "https://secure.gravatar.com/avatar/5fc9a2065017733c9d5f49a5ecd71d64?s=96&d=mm&r=g",
              },
              "comments": Object {
                "nodes": Array [],
              },
            },
          },
          "featuredImage": null,
          "title": "Gutenberg: Embed Blocks",
        },
        Object {
          "author": Object {
            "node": Object {
              "avatar": Object {
                "url": "https://secure.gravatar.com/avatar/5fc9a2065017733c9d5f49a5ecd71d64?s=96&d=mm&r=g",
              },
              "comments": Object {
                "nodes": Array [],
              },
            },
          },
          "featuredImage": null,
          "title": "Gutenberg: Formatting Blocks",
        },
        Object {
          "author": Object {
            "node": Object {
              "avatar": Object {
                "url": "https://secure.gravatar.com/avatar/5fc9a2065017733c9d5f49a5ecd71d64?s=96&d=mm&r=g",
              },
              "comments": Object {
                "nodes": Array [],
              },
            },
          },
          "featuredImage": null,
          "title": "Gutenberg: Layout Element Blocks",
        },
        Object {
          "author": Object {
            "node": Object {
              "avatar": Object {
                "url": "https://secure.gravatar.com/avatar/5fc9a2065017733c9d5f49a5ecd71d64?s=96&d=mm&r=g",
              },
              "comments": Object {
                "nodes": Array [],
              },
            },
          },
          "featuredImage": null,
          "title": "Gutenberg: Columns",
        },
        Object {
          "author": Object {
            "node": Object {
              "avatar": Object {
                "url": "https://secure.gravatar.com/avatar/5fc9a2065017733c9d5f49a5ecd71d64?s=96&d=mm&r=g",
              },
              "comments": Object {
                "nodes": Array [],
              },
            },
          },
          "featuredImage": Object {
            "node": Object {
              "altText": "",
              "sourceUrl": "https://gatsbyinttests.wpengine.com/wp-content/uploads/2020/03/84-1000x1000-1.jpg",
            },
          },
          "title": "Hello world!",
        },
      ],
    },
    "testPost": Object {
      "title": "Hello world!",
    },
  },
  "extensions": Object {},
}
`;

exports[`[gatsby-source-wordpress-experimental] data resolution resolves posts INCREMENTED 1`] = `
Object {
  "data": Object {
    "allWpPost": Object {
      "nodes": Array [
        Object {
          "author": Object {
            "node": Object {
              "avatar": Object {
                "url": "https://secure.gravatar.com/avatar/5fc9a2065017733c9d5f49a5ecd71d64?s=96&d=mm&r=g",
              },
              "comments": Object {
                "nodes": Array [],
              },
            },
          },
          "featuredImage": null,
          "title": "Gutenberg: Image Alignment",
        },
        Object {
          "author": Object {
            "node": Object {
              "avatar": Object {
                "url": "https://secure.gravatar.com/avatar/5fc9a2065017733c9d5f49a5ecd71d64?s=96&d=mm&r=g",
              },
              "comments": Object {
                "nodes": Array [],
              },
            },
          },
          "featuredImage": null,
          "title": "Gutenberg: Widget Blocks",
        },
        Object {
          "author": Object {
            "node": Object {
              "avatar": Object {
                "url": "https://secure.gravatar.com/avatar/5fc9a2065017733c9d5f49a5ecd71d64?s=96&d=mm&r=g",
              },
              "comments": Object {
                "nodes": Array [],
              },
            },
          },
          "featuredImage": null,
          "title": "Gutenberg: Common Blocks",
        },
        Object {
          "author": Object {
            "node": Object {
              "avatar": Object {
                "url": "https://secure.gravatar.com/avatar/5fc9a2065017733c9d5f49a5ecd71d64?s=96&d=mm&r=g",
              },
              "comments": Object {
                "nodes": Array [],
              },
            },
          },
          "featuredImage": null,
          "title": "Gutenberg: Classic Block",
        },
        Object {
          "author": Object {
            "node": Object {
              "avatar": Object {
                "url": "https://secure.gravatar.com/avatar/5fc9a2065017733c9d5f49a5ecd71d64?s=96&d=mm&r=g",
              },
              "comments": Object {
                "nodes": Array [],
              },
            },
          },
          "featuredImage": null,
          "title": "Gutenberg: Embed Blocks",
        },
        Object {
          "author": Object {
            "node": Object {
              "avatar": Object {
                "url": "https://secure.gravatar.com/avatar/5fc9a2065017733c9d5f49a5ecd71d64?s=96&d=mm&r=g",
              },
              "comments": Object {
                "nodes": Array [],
              },
            },
          },
          "featuredImage": null,
          "title": "Gutenberg: Formatting Blocks",
        },
        Object {
          "author": Object {
            "node": Object {
              "avatar": Object {
                "url": "https://secure.gravatar.com/avatar/5fc9a2065017733c9d5f49a5ecd71d64?s=96&d=mm&r=g",
              },
              "comments": Object {
                "nodes": Array [],
              },
            },
          },
          "featuredImage": null,
          "title": "Gutenberg: Layout Element Blocks",
        },
        Object {
          "author": Object {
            "node": Object {
              "avatar": Object {
                "url": "https://secure.gravatar.com/avatar/5fc9a2065017733c9d5f49a5ecd71d64?s=96&d=mm&r=g",
              },
              "comments": Object {
                "nodes": Array [],
              },
            },
          },
          "featuredImage": null,
          "title": "Gutenberg: Columns",
        },
        Object {
          "author": Object {
            "node": Object {
              "avatar": Object {
                "url": "https://secure.gravatar.com/avatar/5fc9a2065017733c9d5f49a5ecd71d64?s=96&d=mm&r=g",
              },
              "comments": Object {
                "nodes": Array [],
              },
            },
          },
          "featuredImage": Object {
            "node": Object {
              "altText": "",
              "sourceUrl": "https://gatsbyinttests.wpengine.com/wp-content/uploads/2020/03/84-1000x1000-1.jpg",
            },
          },
          "title": "Hello world! DELTA SYNC",
        },
      ],
    },
    "testPost": Object {
      "title": "Hello world! DELTA SYNC",
    },
  },
  "extensions": Object {},
}
`;

exports[`[gatsby-source-wordpress-experimental] data resolution resolves root fields 1`] = `
Object {
  "data": Object {
    "wp": Object {
      "allSettings": Object {
        "discussionSettingsDefaultCommentStatus": "open",
        "discussionSettingsDefaultPingStatus": "open",
        "generalSettingsDateFormat": "F j, Y",
        "generalSettingsDescription": "Just another WordPress site",
        "generalSettingsLanguage": "en_US",
        "generalSettingsStartOfWeek": 1,
        "generalSettingsTimeFormat": "g:i a",
        "generalSettingsTimezone": "",
        "generalSettingsTitle": "Automated testing for Gatsby source WordPress V4",
        "generalSettingsUrl": "https://gatsbyinttests.wpengine.com",
        "readingSettingsPostsPerPage": 10,
        "writingSettingsDefaultCategory": 23,
        "writingSettingsDefaultPostFormat": "",
        "writingSettingsUseSmilies": true,
      },
      "nodeType": null,
      "writingSettings": Object {
        "defaultCategory": 23,
        "defaultPostFormat": "0",
        "useSmilies": true,
      },
    },
  },
  "extensions": Object {},
}
`;

exports[`[gatsby-source-wordpress-experimental] data resolution resolves root fields INCREMENTED 1`] = `
Object {
  "data": Object {
    "wp": Object {
      "allSettings": Object {
        "discussionSettingsDefaultCommentStatus": "open",
        "discussionSettingsDefaultPingStatus": "open",
        "generalSettingsDateFormat": "F j, Y",
        "generalSettingsDescription": "Just another WordPress site",
        "generalSettingsLanguage": "en_US",
        "generalSettingsStartOfWeek": 1,
        "generalSettingsTimeFormat": "g:i a",
        "generalSettingsTimezone": "",
        "generalSettingsTitle": "Automated testing for Gatsby source WordPress V4",
        "generalSettingsUrl": "https://gatsbyinttests.wpengine.com",
        "readingSettingsPostsPerPage": 10,
        "writingSettingsDefaultCategory": 23,
        "writingSettingsDefaultPostFormat": "",
        "writingSettingsUseSmilies": true,
      },
      "nodeType": null,
      "writingSettings": Object {
        "defaultCategory": 23,
        "defaultPostFormat": "0",
        "useSmilies": true,
      },
    },
  },
  "extensions": Object {},
}
`;

exports[`[gatsby-source-wordpress-experimental] data resolution resolves users 1`] = `
Object {
  "data": Object {
    "allWpUser": Object {
      "nodes": Array [
        Object {
          "databaseId": 1,
          "name": "Tyler",
          "pages": Object {
            "nodes": Array [
              Object {
                "title": "inline html image edited after this post was saved",
              },
              Object {
                "title": "Edited inline html image test",
              },
              Object {
                "title": "Inline gatsby-image Gutenberg test",
              },
              Object {
                "title": "My account",
              },
              Object {
                "title": "Checkout",
              },
              Object {
                "title": "Cart",
              },
              Object {
                "title": "Shop",
              },
              Object {
                "title": "Yoast SEO",
              },
              Object {
                "title": "ACF Field Test",
              },
              Object {
                "title": "French home page",
              },
              Object {
                "title": "Child page",
              },
              Object {
                "title": "Members",
              },
              Object {
                "title": "Activity",
              },
              Object {
                "title": "Sample Page",
              },
            ],
          },
          "posts": Object {
            "nodes": Array [
              Object {
                "title": "Hello world!",
              },
              Object {
                "title": "Gutenberg: Columns",
              },
              Object {
                "title": "Gutenberg: Layout Element Blocks",
              },
              Object {
                "title": "Gutenberg: Formatting Blocks",
              },
              Object {
                "title": "Gutenberg: Embed Blocks",
              },
              Object {
                "title": "Gutenberg: Classic Block",
              },
              Object {
                "title": "Gutenberg: Common Blocks",
              },
              Object {
                "title": "Gutenberg: Widget Blocks",
              },
              Object {
                "title": "Gutenberg: Image Alignment",
              },
            ],
          },
        },
      ],
    },
    "testUser": Object {
      "firstName": "Tyler",
    },
  },
  "extensions": Object {},
}
`;

exports[`[gatsby-source-wordpress-experimental] data resolution resolves users INCREMENTED 1`] = `
Object {
  "data": Object {
    "allWpUser": Object {
      "nodes": Array [
        Object {
          "databaseId": 1,
          "name": "Tyler",
          "pages": Object {
            "nodes": Array [
              Object {
                "title": "inline html image edited after this post was saved",
              },
              Object {
                "title": "Edited inline html image test",
              },
              Object {
                "title": "Inline gatsby-image Gutenberg test",
              },
              Object {
                "title": "My account",
              },
              Object {
                "title": "Checkout",
              },
              Object {
                "title": "Cart",
              },
              Object {
                "title": "Shop",
              },
              Object {
                "title": "Yoast SEO",
              },
              Object {
                "title": "ACF Field Test",
              },
              Object {
                "title": "French home page",
              },
              Object {
                "title": "Child page",
              },
              Object {
                "title": "Members",
              },
              Object {
                "title": "Activity",
              },
              Object {
                "title": "Sample Page DELTA SYNC",
              },
            ],
          },
          "posts": Object {
            "nodes": Array [
              Object {
                "title": "Hello world! DELTA SYNC",
              },
              Object {
                "title": "Gutenberg: Columns",
              },
              Object {
                "title": "Gutenberg: Layout Element Blocks",
              },
              Object {
                "title": "Gutenberg: Formatting Blocks",
              },
              Object {
                "title": "Gutenberg: Embed Blocks",
              },
              Object {
                "title": "Gutenberg: Classic Block",
              },
              Object {
                "title": "Gutenberg: Common Blocks",
              },
              Object {
                "title": "Gutenberg: Widget Blocks",
              },
              Object {
                "title": "Gutenberg: Image Alignment",
              },
            ],
          },
        },
      ],
    },
    "testUser": Object {
      "firstName": "Tyler DELTA SYNC",
    },
  },
  "extensions": Object {},
}
`;
